[package]
name = "xor-securemem"
version = "0.1.0"
authors = ["XOR·APPS Developers <developers@xorapps.cloud"]
license = "Apache-2.0 OR MIT"
description = "Securely hold secrets in memory and protect them against cross-protection-boundary readout via microarchitectural, via attacks on physical layout, and via coldboot attacks."
keywords = ["in-memory", "security"]
categories = ["cryptography", "memory-management"]
edition = "2021"
readme = "README.md"
homepage = "https://xorapps.cloud/libs/xor-securemem"
repository = "https://github.com/xorapps/xor-securemem"

[badges]
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.5.1", default-features = false, features = ["bytes"] }
blake3 = { version = "1.3.3", default-features = false }
chacha20poly1305 = { version = "0.10.1", features = [
    "reduced-round",
], default-features = false }
nanorand = { version = "0.7.0", features = ["chacha", "zeroize", "getrandom"] }
zeroize = { version = "1.5.7", default-features = false }


[profile.release]
opt-level = 3
strip = "debuginfo"
overflow-checks = true
lto = "thin"
